--- a/main.html
+++ b/main.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Today's Date</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-<body> 
-<script>
-let d = new Date();
-alert("Today's date is " + d);
-ghfhgf
-</script>
+<body>
+    
+<script src="sc.js"></script>
+
 </body>
 </html>
-
-console.log('Hello World');
